# manga-voice

./: .env.example  .gitignore  CLAUDE.md  README.md  cast.json  pyproject.toml  requirements.txt  scenario_app.py  streamlit_app.py
.github/workflows/: ci.yml  generate.yml
.streamlit/: secrets.toml.example
assets/characters/: README.md  あおいちゃん.md  あかりちゃん.md  ななしちゃん.md  助手くん.md  博士.md  太郎.md  花子.md
assets/pachinko-manga/: CLAUDE.md  README.md  ナレッジ.md
assets/pachinko-manga/テンプレート/: シナリオ出力形式.md
assets/pachinko-manga/出力/: 第01話_フィーバーの残響.md
assets/pachinko-manga/設定/: キャラクター設定.md  パチンコ知識メモ.md  作品コンセプト.md
assets/pachinko-manga/資料/: サンプル_遠隔操作疑惑.md  サンプル_釘師という職人.md
config/: characters.json  scenario_rules.md
docs/: HANDOFF.md
inputs/: sample_scenario.txt
projects/: ななしちゃん1話.json
schemas/: README.md  art.schema.json  cast.schema.json  scenario.schema.json  script.schema.json  voice_output.schema.json
src/: analyze.py  assemble.py  assets.py  audio_fx.py  cli.py  config.py  models.py  notion.py  prompts.py  scenario_gen.py  scenario_ingest.py  store_github.py  tts.py  validate.py  voices.py  works.py
src/agents/: art_agent.py  base.py  scenario_agent.py  voice_agent.py
src/pipeline/: orchestrator.py  registry.py  spec.py  state.py
tests/: test_assemble.py  test_assets.py  test_audio_fx.py  test_models.py  test_notion.py  test_pipeline.py  test_scenario_app.py  test_scenario_gen.py  test_scenario_ingest.py  test_store_github.py  test_streamlit_app.py  test_tts_helpers.py  test_validate.py  test_works.py
